# CLODS

./: LICENSE  README.md
components/ir-generation/: .dockerignore  .gitignore  Dockerfile  README.md  SimpleMath.java  android-ir-disable-app-bypass.patch  attach.sh  build.sh  delete.sh  entrypoint.sh  generate-ir.sh  reflect.json  run.sh  shared_vars.sh
components/ir-generation/hdfs/: Dockerfile  build.sh  delete.sh  generate-hdfs-ir.sh  run.sh  shared_vars.sh
components/ir-generation/hdfs/container/: build-hadoop.sh  generate-native-image.sh  verify-artifacts.sh
components/ir-generation/hdfs/metadata/: reflect-config.json  resource-config.json
components/static-analyzer/: .gitattributes  .gitignore  README.md
components/static-analyzer/StaticAnalysis/: CLODS.conf  CMakeLists.txt  README  StaticAnalysis.cpp  jumpTable.conf
components/static-analyzer/StaticAnalysis/include/: CallerMapGenPass.h  Compare.h  ControlDependency.h  DataDependency.h  DeleteNullPtrException.h  Helloworld.h  InstrumentationPlan.h  Optimization.h  ProtocBuf.h  Utility.h
components/static-analyzer/StaticAnalysis/include/EventGraph/: ConditionEvent.h  Edge.h  Event.h  EventGraph.h  SourceLocation.h
components/static-analyzer/StaticAnalysis/lib/: CMakeLists.txt
components/static-analyzer/StaticAnalysis/lib/CallerMapGenPass/: CMakeLists.txt  CallerMapGenPass.cpp
components/static-analyzer/StaticAnalysis/lib/Compare/: CMakeLists.txt  Compare.cpp  PrefixTree.cpp  Trace.cpp
components/static-analyzer/StaticAnalysis/lib/Compare/include/: Trace.hpp
components/static-analyzer/StaticAnalysis/lib/ControlDependencyPass/: CMakeLists.txt  ControlDependency.cpp
components/static-analyzer/StaticAnalysis/lib/DataDependency/: CMakeLists.txt  DataDependency.cpp
components/static-analyzer/StaticAnalysis/lib/DeleteNullPtrExceptionPass/: CMakeLists.txt  DeleteNullPtrException.cpp
components/static-analyzer/StaticAnalysis/lib/EventGraph/: CMakeLists.txt  EventGraph.cpp
components/static-analyzer/StaticAnalysis/lib/HelloworldPass/: CMakeLists.txt  Helloworld.cpp
components/static-analyzer/StaticAnalysis/lib/Optimization/: CMakeLists.txt  Optimization.cpp  README
components/static-analyzer/StaticAnalysis/lib/ProtocBuf/: .gitignore  CMakeLists.txt  ProtocBuf.cpp  README
components/static-analyzer/StaticAnalysis/lib/ProtocBuf/bm_protobuf/: instrumentation.proto
components/static-analyzer/StaticAnalysis/lib/Utility/: CMakeLists.txt  InstrumentationPlan.cpp  Utility.cpp
components/static-analyzer/StaticAnalysis/test/DeleteNullPtrException/: .gitignore  NullPtrException.ll  NullPtrExceptionInter.ll  NullPtrExceptionInterNoCatch.ll  NullPtrExceptionNoCatch.ll
components/static-analyzer/StaticAnalysis/test/motivating_example/: CLODS.conf  README.md  input.txt  output_ref.txt  test.sh
components/static-analyzer/bytecode/: 614good.bc  motivating_example_fast.bc
components/static-analyzer/repro/614good/: Dockerfile  compare_reference.py  drive_rounds.py  reproduce-614good.sh
components/static-analyzer/repro/614good/reference/: manifest.json
components/static-analyzer/repro/motivating_example/: Dockerfile  compare_reference.py  drive_rounds.py  normalize_rules.py  reproduce.sh
components/static-analyzer/repro/motivating_example/reference/: manifest-fast.json  manifest.json  motivating-example-rounds-1-5.txt
